@@ -465,10 +465,6 @@ void evdns_set_transaction_id_fn(uint16_t (*fn)(void));
 
 #define DNS_NO_SEARCH 1
 
-#ifdef __cplusplus
-}
-#endif
-
 /*
  * Structures and functions used to implement a DNS server.
  */
@@ -515,5 +511,9 @@ int evdns_server_request_respond(struct evdns_server_request *req, int err);
 int evdns_server_request_drop(struct evdns_server_request *req);
 struct sockaddr;
 int evdns_server_request_get_requesting_addr(struct evdns_server_request *_req, struct sockaddr *sa, int addr_len);
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif  /* !EVENTDNS_H */
